--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{{ site.description }}">
-    <title>{{ site.title }}</title>
+    <title> 50M </title>
 </head>
 <body>
     <header>
-        <h1>{{ site.title }}</h1>
+        <h1>50M</h1>
     </header>
     <main>
-        <p>{{ site.description }}</p>
+        <p> This is a projects page</p>
         </main>
     <footer>
-        <p>&copy; {{ site.title }} 2025</p>
+        <p> ©50M2025 </p>
     </footer>
 </body>
 </html>
