--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </header>
     <main>
         <p> This is a projects page</p>
+        <h1>Hello</h1>
         </main>
     <footer>
         <p> ©50M2025 </p>
