--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title> 50M </title>
+    <title style="background-color:DodgerBlue;">Hello World</title>
 </head>
 <body>
     <header>
