--- a/index.html
+++ b/index.html
@@ -2,18 +2,8 @@
 <html lang="en">
 <head>
     <title> 50M </title>
-    <title style="background-color:DodgerBlue;">Hello World</title>
 </head>
 <body>
-    <header>
-        <h1>50M</h1>
-    </header>
-    <main>
-        <p> This is a projects page</p>
-        <h1>Hello</h1>
-        </main>
-    <footer>
-        <p> ©50M2025 </p>
-    </footer>
+ <canvas id="myCanvas" width="500" height="600"></canvas>
 </body>
 </html>
