--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title> 50M </title>
 </head>
 <body>
- <canvas id="myCanvas" width="500" height="600"></canvas>
+ <H1>Hello_World</H1>
 </body>
 </html>
