--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
 </head>
 <body>
 <h1><a href="https://artemis50m.github.io/50M.github.io/">50M</a></h1>
+    <style>
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: none;
+}
+</style>
 </body>
 </html>
