--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ h3{
     <!-- This is a clickable link -->
     <h1><a href="https://artemis50m.github.io/50M.github.io/">50M</a></h1>
     <h3> PONG </h3>
-    <img src ="https://drive.google.com/file/d/1HBxwYZ4ijz5W65JlzHgtjgkfR-ZWsmMF/view">
+    <img src ="">
     
     
 </body>
